--- a/client/src/app/game/chat/chat.module.css
+++ b/client/src/app/game/chat/chat.module.css
@@ -1,12 +1,14 @@
 .chat {
-	width: 300px;
+	/* width: 300px; */
+	width: 100%;
 	position: fixed;
 	top: 0;
 	left: 0;
 	min-height: 250px;
-	height: calc(100vh - 240px);
+	height: 70vh;
 	background: rgba(0, 0, 0, 0.9);
 	display: flex;
+	padding: 1vh;
 	flex-flow: column nowrap;
 }
 
@@ -67,8 +69,11 @@
 
 .message {
 	word-break: break-word;
-	margin-bottom: 2px;
-	font-size: 14px;
+	margin-bottom: 0.25rem;
+	font-size: 1rem;
+	/* display: flex;
+	gap: 0.5vh;
+	align-items: center; */
 }
 
 .player {
@@ -79,8 +84,15 @@
 	color: #5ea758;
 }
 
+.time {
+	color: var(--gray-400);
+	font-size: 0.75rem;
+	padding-right: 0.25rem;
+}
+
 .playerName {
 	font-family: MinecraftBold;
+	padding-right: 0.5rem;
 }
 
 .text {
