organize game images & added board side setting

--- a/client/src/app/game/player-info/player-info.module.scss
+++ b/client/src/app/game/player-info/player-info.module.scss
@@ -15,7 +15,7 @@
 	border-image-slice: 30;
 	border-image-width: 20px;
 	border-image-repeat: stretch stretch;
-	border-image-source: url('images/border_frame.png');
+	border-image-source: url('images/game/border_frame.png');
 	border-style: solid;
 	background: linear-gradient(
 		-90deg,
