--- a/client/src/app/game/actions/actions.module.scss
+++ b/client/src/app/game/actions/actions.module.scss
@@ -20,7 +20,7 @@
 	border-image-slice: 30;
 	border-image-width: 20px;
 	border-image-repeat: stretch stretch;
-	border-image-source: url('images/border_frame.png');
+	border-image-source: url('images/game/border_frame.png');
 	border-style: solid;
 
 	> h2 {
@@ -43,6 +43,13 @@
 	flex-direction: column;
 	gap: 10px;
 	width: 100%;
+}
+
+.used {
+	position: relative;
+	filter: brightness(65%) sepia(0.7);
+	border-radius: 5px;
+	overflow: hidden;
 }
 
 #status {
