--- a/client/src/app/game/board/board.module.scss
+++ b/client/src/app/game/board/board.module.scss
@@ -26,7 +26,7 @@ $grid-size: 25px;
 	border-image-slice: 30;
 	border-image-width: 20px;
 	border-image-repeat: stretch stretch;
-	border-image-source: url('images/border_frame.png');
+	border-image-source: url('images/game/border_frame.png');
 	border-style: solid;
 	padding: 20px;
 }
