--- a/client/src/app/deck/layout/deck-layout.module.scss
+++ b/client/src/app/deck/layout/deck-layout.module.scss
@@ -6,6 +6,16 @@
 	transition: height 0.25s ease-in-out;
 }
 
+.background {
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+	position: absolute;
+	background: url('/images/menu-background-image.png') center center no-repeat;
+	background-size: cover;
+	filter: blur(2px);
+}
+
 header {
 	height: 3rem;
 	background: var(--gray-50);
