--- a/client/src/components/spinner/spinner.module.scss
+++ b/client/src/components/spinner/spinner.module.scss
@@ -16,15 +16,15 @@ $size: 4vh;
 }
 
 .pixel {
-	width: 100%;
-	height: 100%;
+	width: 105%;
+	height: 105%;
 	background: white;
 	opacity: 0;
 	animation: spinner $speed infinite ease-in-out;
 }
 
 @for $i from 1 through 16 {
-	.pixel#{$i} {
+	#pixel#{$i} {
 		grid-area: p#{$i};
 		animation-delay: calc($speed / 16) * -$i;
 	}
