added 'activate hermit' message to actions

--- a/client/src/app/game/actions/actions.module.scss
+++ b/client/src/app/game/actions/actions.module.scss
@@ -52,6 +52,12 @@
 	overflow: hidden;
 }
 
+.turn {
+	text-transform: uppercase;
+	font-weight: bold;
+	color: lightblue;
+}
+
 #status {
 	width: 100%;
 }
