--- a/client/src/app/game/chat/chat.module.scss
+++ b/client/src/app/game/chat/chat.module.scss
@@ -4,17 +4,31 @@
 	margin: 2vh;
 	padding: 2vh;
 	gap: 2vh;
-	background: hsl(42deg, 17%, 32%);
+	background: var(--gray-600);
 	z-index: 50;
 	display: flex;
 	flex-direction: column;
 	max-width: 1500px;
-	border: 3px solid hsl(42deg, 7%, 20%);
-	border-top: 3px solid hsl(42deg, 7%, 50%);
+	border: 3px solid var(--gray-700);
+	border-top: 3px solid var(--gray-400);
 	resize: both;
 	overflow: hidden;
 	user-select: none;
 	filter: drop-shadow(0 0 8px hsla(0deg, 0%, 10%, 100%));
+
+	&::-webkit-resizer {
+		background: linear-gradient(
+			-45deg,
+			rgba(0, 0, 0, 0%) 10%,
+			rgba(0, 0, 0, 75%) 10%,
+			rgba(0, 0, 0, 75%) 20%,
+			rgba(0, 0, 0, 0%) 20%,
+			rgba(0, 0, 0, 0%) 30%,
+			rgba(0, 0, 0, 75%) 30%,
+			rgba(0, 0, 0, 75%) 40%,
+			rgba(0, 0, 0, 0%) 40%
+		);
+	}
 }
 
 .header {
@@ -22,6 +36,7 @@
 	justify-content: space-between;
 	color: var(--text-light);
 	font-size: 1.2rem;
+	touch-action: none;
 	cursor: grab;
 
 	img {
@@ -39,7 +54,7 @@
 		height: 2rem;
 		width: 0;
 		border-right: 0;
-		background: hsl(42deg, 9%, 22%);
+		background: var(--gray-700);
 		color: var(--text-light);
 	}
 
@@ -57,10 +72,10 @@
 	flex: 1 1 auto;
 	display: flex;
 	flex-direction: column;
-	background: hsl(42deg, 9%, 22%);
-	border: 3px solid hsl(42deg, 7%, 20%);
-	border-bottom: 3px solid hsl(42deg, 7%, 50%);
-	box-shadow: inset 0 0 16px hsla(42deg, 4%, 10%, 100%);
+	background: var(--gray-800);
+	border: 3px solid var(--gray-700);
+	border-bottom: 3px solid var(--gray-400);
+	box-shadow: inset 0 0 16px hsla(0deg, 0%, 10%, 100%);
 
 	&::after {
 		content: '';
@@ -68,7 +83,7 @@
 		inset: 0;
 		margin: 1vh;
 		filter: saturate(0.75) brightness(0.75);
-		border-image: url('images/game/border_frame_gold.png') 30 / 20px;
+		border-image: url('images/game/border_frame.png') 30 / 20px;
 	}
 }
 
