--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -64,6 +64,12 @@
 	src: url('/fonts/BangersBold.otf');
 }
 
+* {
+	box-sizing: border-box;
+	padding: 0;
+	margin: 0;
+}
+
 html,
 body,
 #root,
@@ -92,14 +98,6 @@ code {
 		monospace;
 }
 
-/* @TODO this should only be cleaned up after game screen is reworked */
-
-* {
-	box-sizing: border-box;
-	padding: 0;
-	margin: 0;
-}
-
 h1,
 h2,
 h3,
@@ -110,7 +108,10 @@ h6 {
 }
 
 button {
-	all: unset;
+	margin: 0;
+	padding: 0;
+	border: none;
+	background: none;
 }
 
 input:not([type]),
@@ -133,10 +134,6 @@ li {
 	list-style: none;
 	margin: 0;
 	padding-inline: 0;
-}
-
-::-webkit-scrollbar-corner {
-	background: transparent;
 }
 
 /* scrollbar */
@@ -166,11 +163,4 @@ li {
 ::-webkit-scrollbar-corner,
 ::-webkit-resizer {
 	display: none;
-}
-
-// new stuff
-
-.select {
-	padding-bottom: 1px;
-	background-color: #2a2727;
 }
