--- a/client/src/components/modal/modal.module.scss
+++ b/client/src/components/modal/modal.module.scss
@@ -1,102 +1,101 @@
-.modalWrapper {
-	display: flex;
-	justify-content: center;
-	align-items: flex-start;
-	width: 100%;
-	height: 100%;
+.overlay {
+	background: hsla(0deg, 0%, 10%, 80%);
 	position: fixed;
-	background: rgba(0, 0, 0, 30%);
-	top: 0;
-	left: 0;
-	z-index: 100;
+	inset: 0;
+	z-index: 99;
+	backdrop-filter: blur(2px);
+	animation: overlayShow 500ms cubic-bezier(0.16, 1, 0.3, 1);
 }
 
 .modal {
-	margin-top: 100px;
-	overflow: hidden;
-	min-width: 300px;
+	position: fixed;
+	z-index: 100;
+	top: 30%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	min-width: min(500px, 90vw);
 	min-height: 100px;
-	background: rgb(198, 198, 198);
-	border-radius: 10px;
-	border: 1px solid black;
+	max-width: 300px;
+	max-height: 90vh;
+	background: var(--gray-700);
+	border: 2px solid var(--gray-900);
+	filter: drop-shadow(0 0 8px hsla(0deg, 0%, 10%, 100%));
 	box-shadow: 0 0 3px black;
-	position: relative;
-	padding: 5px;
-	font-family: Minecraft;
 	font-size: 16px;
+	color: var(--text-light);
+	opacity: 0;
+	animation: contentShow 250ms 100ms cubic-bezier(0.16, 1, 0.3, 1) forwards;
 }
 
-.topLine {
-	display: flex;
-	justify-content: space-between;
-	padding: 5px 10px 0;
-}
-
-.closeButton {
-	cursor: pointer;
-	font-size: 24px;
-}
-
-.closeButton:hover {
-	text-shadow: 0 0 2px black;
+.center {
+	top: 50%;
 }
 
 .title {
-	font-family: MinecraftBold;
-	font-size: 18px;
+	margin: 0;
+	color: var(--text-light);
+	font-size: 1.1rem;
+	font-weight: 500;
+	background: var(--gray-500);
+	border: 2px solid var(--gray-400);
+	padding: 0.5rem;
+	text-align: center;
 }
 
-.content {
-	padding: 0;
-}
-
-.topBevel,
-.leftBevel,
-.bottomBevel,
-.rightBevel {
+.close {
 	position: absolute;
+	top: 6px;
+	right: 6px;
+	cursor: pointer;
+	padding: 6px;
+
+	&:hover {
+		background: var(--gray-700);
+	}
 }
 
-.topBevel,
-.bottomBevel {
-	height: 5px;
-	left: 0;
-	right: 0;
+.notice {
+	display: flex;
+	gap: 0.5rem;
+	align-items: center;
+	font-size: 1rem;
+	border: 1px solid var(--gray-300);
+	padding: 0.5rem;
+	background: var(--gray-900);
 }
 
-.leftBevel,
-.rightBevel {
-	width: 5px;
-	top: 0;
-	bottom: 0;
+.noticeIcon {
+	display: grid;
+	place-content: center;
+	border: 2px solid var(--gray-50);
+	width: 20px;
+	height: 20px;
+	flex: 0 0 auto;
+	border-radius: 50%;
+	font-size: 1rem;
+	text-align: center;
+	font-family: serif;
+	font-weight: bold;
 }
 
-.topBevel,
-.leftBevel {
-	background: white;
+@keyframes overlayShow {
+	from {
+		opacity: 0;
+	}
+
+	to {
+		opacity: 1;
+	}
 }
 
-.bottomBevel,
-.rightBevel {
-	background: rgb(86, 86, 86);
-}
+@keyframes contentShow {
+	from {
+		opacity: 0;
+		transform: translate(-50%, -40%) scale(0.9);
+	}
 
-.topBevel {
-	top: 0;
-	right: 5px;
-}
-
-.leftBevel {
-	left: 0;
-	bottom: 5px;
-}
-
-.bottomBevel {
-	bottom: 0;
-	left: 5px;
-}
-
-.rightBevel {
-	right: 0;
-	top: 5px;
+	to {
+		opacity: 1;
+		transform: translate(-50%, -50%) scale(1);
+	}
 }
